# H3Chat

./: .env.example  .gitignore  README.md  agent.md  auth.db  auth.py  ingest-v2.py  ingest.py  ingest_markdown.py  ingest_pdfs.py  main.py  pyproject.toml
