[project]
name = "H3Chat"
version = "0.1.0"
description = "H3 Chat"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain-text-splitters>=1.1.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "python-jose>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
]
